Refactor: stable OAuth2 authorization server, API Gateway, User Service setup